--- a/frontend/sigsmu-tg2-frontend/src/components/cadastronobd/header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/cadastronobd/header.module.css
@@ -1,8 +1,10 @@
 .main {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: center;
+
     padding: 10px;
-    gap: 10px;
+    gap: 15px;
 }
 .main * {
     height: fit-content;
