--- a/frontend/sigsmu-tg2-frontend/src/components/forms/Botao.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/forms/Botao.module.css
@@ -7,10 +7,15 @@
 .cores {
     background-color: rgb(25, 25, 189);
     color: white;
+    padding: 8px;
 }
 .main:hover {
     text-decoration: underline;
     font-weight: 600;
     cursor: pointer;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.219);
+}
+
+.selecionado {
+    background-color: red;
 }
