Arrumei a tela de banco do gestor porém ficou péssimo o esquema para alterações futuras, além de muito confuso por excesso de informação. Já pensei em uma solução melhor e vou aplicar mais tarde!

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/Telas do Gestor/telabancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/Telas do Gestor/telabancoDeDados.module.css
@@ -39,15 +39,15 @@
 .tabelas {
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-around;
 
     grid-area: 2 / 2 / 3 / -1;
     height: 100%;
 } .tabelas * {
-    width: 300px;
+    width: 350px;
 }
 
 .inputGestor {
     grid-area: 2 / -2 / -1 / -1;
     height: 100%;
-
 }
