--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/Telas do Gestor/telabancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/Telas do Gestor/telabancoDeDados.module.css
@@ -1,7 +1,7 @@
 .main {
     border: solid blue;
     display: grid;
-    grid-template: 1fr 6fr 3fr / 1fr 2fr ;
+    grid-template: 1fr 3fr 3fr 2fr / 1fr 2fr ;
 
     height: 94vh;
 }
@@ -18,7 +18,6 @@
 
 
 
-
 .botoes {
     grid-area: 1 / 2 / 2 / -1;
 
@@ -30,24 +29,37 @@
     
     height: 100%;
     border: 1px solid red;
-} .botoes * {
+} 
+.botoes * {
     border: solid black;
     height: fit-content;
     flex: 0 0 170px
 }
 
-.tabelas {
+
+.seletorTabelas {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
 
     grid-area: 2 / 2 / 3 / -1;
+
+    background-color: blue;
     height: 100%;
-} .tabelas * {
+} .seletorTabelas * {
     width: 350px;
 }
 
+
+.tabelaCampos {
+    background-color: red;
+    height: 100%;
+
+    grid-area: 3 / 2 / 4 / -1;
+}
+
+
 .inputGestor {
-    grid-area: 2 / -2 / -1 / -1;
+    grid-area: -2 / 2 / -1 / -1;
     height: 100%;
 }
