--- a/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/header.module.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    justify-content: space-between;
 
     padding: 10px;
     gap: 15px;
