--- a/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/historicoGestor/CSS/cards.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/historicoGestor/CSS/cards.module.css
@@ -1,10 +1,8 @@
-.main {
+.mainComFlex {
     display: flex;
     flex-flow: row nowrap;
     gap: 10px;
 
-    width: 70%;
-    margin: auto;
     padding: 10px;
 } .main span {
     font-weight: 600;
@@ -12,9 +10,11 @@
 
 /* Necessária quando não há botão */
 .mainSemFlex {
-    width: 70%;
-    margin: auto;
     padding: 10px;
+}
+
+.main {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.459);
 }
 
 
@@ -23,7 +23,6 @@
     justify-content: space-between;
 
     width: 100%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.459);
 }
 
 .button {
