--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/CSS/telahistorico.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/CSS/telahistorico.module.css
@@ -1,3 +1,16 @@
 .main {
-    
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+}
+
+.main button {
+    background-color: brown;
+    border-radius: 10px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.main button:hover {
+    text-decoration: underline;
+    color: white;
 }
