--- a/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/historicoGestor/CSS/cards.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/_maiores/gestor/historicoGestor/CSS/cards.module.css
@@ -20,7 +20,7 @@
 
 .secondary {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     width: 100%;
 }
