--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/CSS/telainicio.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/CSS/telainicio.module.css
@@ -1,6 +1,8 @@
 .main {
     display: flex;
     gap: 10px;
-    /* width: 100%; */
+    
     height: 100vh;
+    border: solid black;
+    padding: 10px;
 }
