--- a/frontend/sigsmu-tg2-frontend/src/components/cadastronobd/CSS/header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/cadastronobd/CSS/header.module.css
@@ -7,5 +7,5 @@
     gap: 15px;
 }
 .main * {
-    height: fit-content;
+    height: fit-content; /*fit-content define que a altura de um elemento será ajustada dinamicamente para se encaixar perfeitamente no seu conteúdo.*/
 }
