--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/telalogin.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/telalogin.module.css
@@ -31,9 +31,19 @@
     text-decoration: underline;
 }
 
+
 .main > p {
     text-align: center;
 } .main > p:nth-of-type(2) {
     font-size: 1.2em;
     margin-top: 20px;
+}
+
+.main > form > div {
+    width: 100%;
+}
+
+.main > div * {
+    text-align: center;
+    width: 100%;
 }
