--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/telas-dos-botoes/CSS/teladecustos.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/telas-dos-botoes/CSS/teladecustos.module.css
@@ -35,3 +35,9 @@
 .musico {
     border: solid black;
 }
+
+
+/* Altera a cor do botão selecionado */
+.main input[type="radio"]:checked + label > div {
+    background: red;
+}
