Estrutura dos componentes Botao e Radio aprimoradas para utilizações futuras. Tela do Banco quase concluída!

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/telaorcamento.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/telaorcamento.module.css
@@ -49,3 +49,12 @@
 .complemento {
     flex: 1 0 50px;
 }
+
+
+/* Passa pra próxima tela */
+.main > div:nth-last-of-type(1) {
+    margin-left: auto;
+    margin-right: 250px;
+    background-color: aqua;
+    color: black;
+}
