--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_componentes-grandes/historico/CSS/botoessolicitacoesgestor.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_componentes-grandes/historico/CSS/botoessolicitacoesgestor.module.css
@@ -9,9 +9,9 @@
 
 .main > * {
     text-align: center;
-    background-color: brown;
-    color: black
+    background-color: brown !important;
+    color: black;
 }
 .main > *:hover {
-    color: white
+    color: white;
 }
