--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/telasolicitacoesServico.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/telasolicitacoesServico.module.css
@@ -5,5 +5,11 @@
 }
 
 .main label > div:hover {
-    background-color: aqua;
+    background-color: aqua !important;
+}
+
+
+/*       Arruma os cards selecionados       */
+.main input[type="radio"]:checked + label * {
+    background-color: white;
 }
