--- a/frontend/sigsmu-tg2-frontend/src/components/CSS/botao.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/CSS/botao.module.css
@@ -8,7 +8,7 @@
     border: solid black;
     text-align: center;
 }
-.main:hover {
+.main:hover, .cores:hover {
     /* text-decoration: underline; */
     /* font-weight: 600; */
     cursor: pointer;
@@ -17,7 +17,7 @@
 }
 
 .cores {
-    background-color: rgb(25, 25, 189);
-    color: white;
-    padding: 8px;
+    background-color: rgb(25, 25, 189) ;
+    color: white ;
+    padding: 8px ; 
 }
