--- a/frontend/sigsmu-tg2-frontend/src/styles/global.css
+++ b/frontend/sigsmu-tg2-frontend/src/styles/global.css
@@ -4,3 +4,7 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+input[type="radio"]:checked + label div {
+    background-color: red;
+}
