--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/telarepertorio.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/telarepertorio.module.css
@@ -13,7 +13,10 @@
 
 .main select {
     display: block;
+    border-radius: 10px ;
+    padding: 2px;
 }
+
 
 /* Altera todos os SELECT */
 .selects * {
