--- a/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t03_carrossel.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t03_carrossel.module.css
@@ -10,26 +10,33 @@
     align-items: center;
     /* margin-top: 20px; */
     background-color: #18213D;
-
+    /* height: 10vh;
+    width: 100vw; */
+    padding: 50px;
+    height: 50vh;
 }
 
 /* Área principal do carrossel */
 .carrossel{
     position: relative;
-    width: 800px;
-    /* height: 300px; */
-    height: 100%;
-    /* overflow: hidden; controla o que acontece com o conteúdo que ultrapassa os limites de um elemento (por exemplo, quando uma imagem é maior que a div que a contém). */
-    border-radius: 10px;
+    /* width: 800px; */
+    /* width: 100vw; */
+    height: 800px;
+    /* height: 100%; */
+    /* height: 50vh; */
+    overflow: hidden; /*controla o que acontece com o conteúdo que ultrapassa os limites de um elemento (por exemplo, quando uma imagem é maior que a div que a contém). */
+    border-radius: 100px;
     box-shadow: 0 4px 15px rgba(0,0,0,1.3);
+
 }
 
-.imagem {
-    width: 100%;
-    height: 100%;
+.carrosselImagem {
+    /* width: 10%;
+    height: 10%; */
     object-fit: cover;
     transition: opacity 0.6s ease-in-out;
-    border-radius: 100x;
+    border-radius: 100px;
+    background-color: black;
 }
 
 .btn {}
