--- a/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t04_main.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t04_main.module.css
@@ -30,3 +30,9 @@
     height: 30px;
     border: 1px solid red;
 }
+
+.footer>p{
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
