--- a/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t03_carrossel.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t03_carrossel.module.css
@@ -13,30 +13,34 @@
     /* height: 10vh;
     width: 100vw; */
     padding: 50px;
-    height: 50vh;
+    height: 100vh;
+    overflow: hidden;
 }
 
 /* Área principal do carrossel */
-.carrossel{
+/* .carrossel{
     position: relative;
-    /* width: 800px; */
-    /* width: 100vw; */
+    width: 800px;
+    width: 100vw; 
     height: 800px;
-    /* height: 100%; */
-    /* height: 50vh; */
-    overflow: hidden; /*controla o que acontece com o conteúdo que ultrapassa os limites de um elemento (por exemplo, quando uma imagem é maior que a div que a contém). */
-    border-radius: 100px;
-    box-shadow: 0 4px 15px rgba(0,0,0,1.3);
+    height: 100%;
+    height: 50vh; */
+    /*overflow: hidden; /*controla o que acontece com o conteúdo que ultrapassa os limites de um elemento (por exemplo, quando uma imagem é maior que a div que a contém). */
+    /* border-radius: 100px; 
+    box-shadow: 0 4px 15px rgba(0,0,0,1.3);  */
 
-}
+/* } */
 
 .carrosselImagem {
-    /* width: 10%;
-    height: 10%; */
-    object-fit: cover;
-    transition: opacity 0.6s ease-in-out;
-    border-radius: 100px;
-    background-color: black;
+  width: 95vw;
+  height: 700px;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carrosselImagem:hover {
+  transform: scale(1.05);
 }
 
 .btn {}
