Finalmente as rotas estão funcionando! Não da melhor forma possível (alinhadas) porém, funcionais. Conclusão da funcionalidade principal da tela do banco!

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
@@ -1,3 +1,13 @@
+.main label div {
+    /* background-color: aqua; */
+    border-radius: 10px;
+    border: 1px solid black;
+    color: black;
+    font-size: large;
+} .main div > div > div {
+    background-color: rgb(30, 116, 229);
+}
+
 .main {
     /* border: solid blue; */
 
