--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t01_header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t01_header.module.css
@@ -10,6 +10,12 @@
     height: fit-content; /*fit-content define que a altura de um elemento será ajustada dinamicamente para se encaixar perfeitamente no seu conteúdo.*/
 }
 
-.main input[type="radio"]:checked + label > div {
 
+.main label div {
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.main input[type="radio"]:checked + label > div {
+    
 }
