CSS da tela de login do sistema alterado

--- a/frontend/sigsmu-tg2-frontend/src/components/CSS/botao.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/components/CSS/botao.module.css
@@ -8,7 +8,8 @@
 }
 
 .cores {
-    background-color: var(--cordourado10) ;
+    /* background-color: var(--cordourado10) ; */
+    background-color: var(--corazul) ;
     color: var(--corletrasbotao) ;
     padding: 8px ; 
 }
