--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
@@ -5,11 +5,12 @@
 }
 
 .main label > div:hover {
-    background-color: aqua !important;
+    background-color: var(--corazul) !important;
 }
 
 
 /*       Arruma os cards selecionados       */
 .main input[type="radio"]:checked + label * {
     background-color: white;
+    color: black ;
 }
