--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
@@ -4,7 +4,7 @@
     height: 90vh;
     gap: 10px;
     padding: 15px;
-    background-color: #196dba;
+    background-color: var(--corazul);
     background-color: --br;
     color: #1e1e1e;
     font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
