--- a/frontend/sigsmu-tg2-frontend/src/styles/global.css
+++ b/frontend/sigsmu-tg2-frontend/src/styles/global.css
@@ -5,7 +5,7 @@
     --corpreto: #1E1E1E;
     --corazul: #196DBA;
 
-    --corletrasbotao: brown;
+    --corletrasbotao: black;
     --corbotaoselecionado: red;
 }
 
