--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
@@ -2,6 +2,10 @@
     display: flex;
     flex-flow: column;
     gap: 10px;
+
+    width: 80vw;
+    margin: auto;
+    padding: 20px;
 }
 
 .main label > div:hover {
