--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/t01_login.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/t01_login.module.css
@@ -77,10 +77,11 @@
     width: 80px;
     height: 80px;
     margin: 0 auto 10px;
-    padding: 15px;
+    padding: 5px;
     background: #196DBA;
     border-radius: 50%;
     box-shadow: 0px 4px 15px rgba(25, 109, 186, 0.3);
+    box-shadow: 0 0 5px black;
 }
 
 .form {
@@ -126,15 +127,26 @@
     margin-bottom: 10px;
 }
 
+
 .main div > div {
     /* background-color: #196DBA; */
     font-weight: bold;
+}
+.main div > div:hover {
+    /* background-color: #196DBA; */
+    font-weight: bold;
+    text-decoration: underline;
+    color: #DB9D12;
 }
 
 .main form div:nth-last-child(1) {/*-++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
     /* background-color: blueviolet; */
     /* font: ; */
     color: #FFFFFF;
+    border-radius: 10px;
+}
+.main form div:nth-last-child(1):hover {/*-++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+    transform: scale(1.05);
 }
 
 /* Animações e estados interativos */
