--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t02_orcamento.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t02_orcamento.module.css
@@ -40,6 +40,9 @@
     text-indent: 2px;
 }
 .main legend {
+    background-color: var(--cordourado10);
+    border-radius: 10px;
+    padding: 3px;
     font-weight: 600;
 }
 .main fieldset {
