Ligação perfeita do TipoDeLocal do evento! (GET / POST)

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
@@ -26,8 +26,10 @@
 /* ===== SCHEMA DO BANCO ===== */
 .schema {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
+
     text-align: center;
     font-size: 0.95rem;
     color: #374151;
@@ -35,7 +37,6 @@
     background: linear-gradient(145deg, #f3f4f6, #ffffff);
     grid-area: 1 / 1 / -1 / 2;
 }
-
 
 
 /* ===== BOTÕES CRUD ===== */
