SELECT do banco do gestor criado e funcional para todas as tabelas. Dando commit para não fazer besteira agora!

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t01_header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t01_header.module.css
@@ -15,6 +15,11 @@
 .main label div {
     border-radius: 10px;
     border: 2px solid black;
+    color: white;
+}
+.main label div:hover {
+    background-color: #fff;
+    color: black;
 }
 
 .main input[type="radio"]:checked + label > div {
